--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
-name: helloworld # 这是你的插件的唯一识别名。
-desc: 这是 AstrBot 的默认插件，支持关键词回复。 # 插件简短描述
-version: v1.3 # 插件版本号。格式：v1.1.1 或者 v1.1
-author: Soulter # 作者
-repo: https://github.com/Soulter/helloworld # 插件的仓库地址
+name: counter
+desc: 计数器插件 /cnt add|del|list, 消息含计数器关键字自动+1, 可添加计数器别名关键字
+version: v1.0
+author: hami
+repo: https://github.com/0x6861/astrbot_plugin_counter
